examples/test/testpolicy16526.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16526
  namespace: namespace423
spec:
  podSelector:
    matchLabels:
      key28: value37
      key35: value29
      key41: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value2
          key41: value34
      podSelector:
        matchLabels:
          key13: value24
          key17: value39
